docs/1.2rc1/_sources/api/gammapy.analysis.AnalysisConfig.rst.txt
AnalysisConfig
==============

.. currentmodule:: gammapy.analysis

.. autoclass:: AnalysisConfig
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~AnalysisConfig.model_computed_fields
      ~AnalysisConfig.model_config
      ~AnalysisConfig.model_extra
      ~AnalysisConfig.model_fields
      ~AnalysisConfig.model_fields_set

   .. rubric:: Methods Summary

   .. autosummary::

      ~AnalysisConfig.construct
      ~AnalysisConfig.copy
      ~AnalysisConfig.dict
      ~AnalysisConfig.from_orm
      ~AnalysisConfig.from_yaml
      ~AnalysisConfig.json
      ~AnalysisConfig.model_construct
      ~AnalysisConfig.model_copy
      ~AnalysisConfig.model_dump
      ~AnalysisConfig.model_dump_json
      ~AnalysisConfig.model_json_schema
      ~AnalysisConfig.model_parametrized_name
      ~AnalysisConfig.model_post_init
      ~AnalysisConfig.model_rebuild
      ~AnalysisConfig.model_validate
      ~AnalysisConfig.model_validate_json
      ~AnalysisConfig.model_validate_strings
      ~AnalysisConfig.parse_file
      ~AnalysisConfig.parse_obj
      ~AnalysisConfig.parse_raw
      ~AnalysisConfig.read
      ~AnalysisConfig.schema
      ~AnalysisConfig.schema_json
      ~AnalysisConfig.set_logging
      ~AnalysisConfig.to_yaml
      ~AnalysisConfig.update
      ~AnalysisConfig.update_forward_refs
      ~AnalysisConfig.validate
      ~AnalysisConfig.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: model_computed_fields
   .. autoattribute:: model_config
   .. autoattribute:: model_extra
   .. autoattribute:: model_fields
   .. autoattribute:: model_fields_set

   .. rubric:: Methods Documentation

   .. automethod:: construct
   .. automethod:: copy
   .. automethod:: dict
   .. automethod:: from_orm
   .. automethod:: from_yaml
   .. automethod:: json
   .. automethod:: model_construct
   .. automethod:: model_copy
   .. automethod:: model_dump
   .. automethod:: model_dump_json
   .. automethod:: model_json_schema
   .. automethod:: model_parametrized_name
   .. automethod:: model_post_init
   .. automethod:: model_rebuild
   .. automethod:: model_validate
   .. automethod:: model_validate_json
   .. automethod:: model_validate_strings
   .. automethod:: parse_file
   .. automethod:: parse_obj
   .. automethod:: parse_raw
   .. automethod:: read
   .. automethod:: schema
   .. automethod:: schema_json
   .. automethod:: set_logging
   .. automethod:: to_yaml
   .. automethod:: update
   .. automethod:: update_forward_refs
   .. automethod:: validate
   .. automethod:: write
